Prevent string styling from bleeding through interpolations

--- a/styles/syntax/_base.less
+++ b/styles/syntax/_base.less
@@ -97,6 +97,10 @@
 .syntax--string {
   color: @hue-4;
 
+  > .syntax--source {
+    color: @syntax-fg;
+  }
+
   &.syntax--regexp {
     color: @hue-1;
 
